Adding jacoco - FIxing issues